testsuite/keen.dg/type-016.c
// { dg-do "compile" }
// { dg-options "-w" }

unsigned short int x;
unsigned short long y;	// { dg-error "both" }

